--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
     <string name="app_name">Talentwars</string>
     <string name="title_popular_movies" />
+    <string name="title_details">Details</string>
+    <string name="title_favourites">Favourites</string>
 
 
 
-    <string name="title_sources">Sources</string>
-    <string name="title_saved">Saved</string>
     <string name="no_articles_saved">Check Headlines and Save some Articles\nThey will appear here after Saved !</string>
     <string name="close">Close</string>
     <string name="save">Save Article</string>
